--- a/movieRecommendation/pom.xml
+++ b/movieRecommendation/pom.xml
@@ -87,6 +87,11 @@
             <artifactId>spark-core_2.10</artifactId>
             <version>1.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.databricks</groupId>
+            <artifactId>spark-csv_2.10</artifactId>
+            <version>1.4.0</version>
+        </dependency>
 
     </dependencies>
 
